ui优化，完善并修改组件配置

--- a/example/index.html
+++ b/example/index.html
@@ -22,11 +22,11 @@
   <script src="../dist/lib/codemirror/mode/markdown/markdown.js"></script>
   <script src="../dist/lib/highlight/highlight.min.js"></script>
   <script src="../dist/lib/highlight/languages/javascript.min.js"></script>
-  <script src="../dist/lib/mdjs/mdjs.js"></script>
+  <script src="../dist/lib/mdjs/marked.js"></script>
   <script src="../dist/lib/lodash/lodash.js"></script>
   
   <!-- 内部 JS -->
-  <script src="../dist/jmp.0.1.0.js"></script>
+  <script src="../dist/jmp.js"></script>
 
   <script src="./index.js"></script>
 </body>
