--- a/example/index.html
+++ b/example/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>js-markdown-plus</title>
-  <link rel="stylesheet" href="../dist/lib/highlight/agate.min.css">
-  <link rel="stylesheet" href="../dist/lib/codemirror/lib/codemirror.css">
-  <link rel="stylesheet" href="../dist/lib/codemirror/theme/zenburn.css">
+  <!-- <link rel="stylesheet" href="../dist/lib/highlight/agate.min.css"> -->
+  <!-- <link rel="stylesheet" href="../dist/lib/codemirror/lib/codemirror.css"> -->
+  <!-- <link rel="stylesheet" href="../dist/lib/codemirror/theme/zenburn.css"> -->
   <!-- 内部样式 -->
   <link rel="stylesheet" href="./index.css?t=123">
 </head>
@@ -19,10 +19,10 @@
     <div id="jmp-md2"></div>
   </div>
   <script src="../dist/lib/codemirror/lib/codemirror.js"></script>
-  <script src="../dist/lib/codemirror/mode/markdown/markdown.js"></script>
+  <!-- <script src="../dist/lib/codemirror/mode/markdown/markdown.js"></script> -->
   <script src="../dist/lib/highlight/highlight.min.js"></script>
   <script src="../dist/lib/highlight/languages/javascript.min.js"></script>
-  <script src="../dist/lib/mdjs/marked.js"></script>
+  <script src="../dist/lib/marked/marked.js"></script>
   <script src="../dist/lib/lodash/lodash.js"></script>
   
   <!-- 内部 JS -->
